# django-git-deploy

./: Makefile  pyproject.toml  setup.py
django_git_deploy/: __init__.py  entry_points.py
hooks/: post-receive
tests/: test_deploy.py  test_hook.py  util.py
