[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic= ["version"]
name = "django-git-deploy"


# The project has a real dependency on the yaml package; 
# however the django-git-deploy package will (typically) be installed
# system-wide - and at least on Ubuntu 24.04 the operating system already
# has a debian package with pyaml installed - which conflicts with the one
# specified here.
dependencies = [
  #  "pyaml"
]

[tool.hatch.version]
path = "django_git_deploy/version.py"

[tool.uv]
dev-dependencies = [
  "build"
]

[project.scripts]
make_hook = "django_git_deploy.entry_points:make_hook"
